apps/translator-api/base/translator-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: translator-api
spec:
  selector:
    matchLabels:
      app: translator-api
      tier: api
  template:
    metadata:
      labels:
        app: translator-api
        tier: api
    spec:
      containers:
        - name: node
          image: quicklookup/translator-api:8315409
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
          # volumeMounts:
          # - name: ephemerala
          #   mountPath: /usr/local/share/fonts
          # - name: ephemeralb
          #   mountPath: /cache
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: api/status/alive
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 7
            failureThreshold: 6
          readinessProbe:
            httpGet:
              port: 8000
              path: api/status/ready
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 8
            failureThreshold: 6
      imagePullSecrets:
        - name: dockerlock
      # volumes:
      #   - name: ephemerala
      #     emptyDir:
      #       sizeLimit: 5Gi
      #   - name: ephemeralb
      #     emptyDir:
      #       sizeLimit: 5Gi
