apps/translator-api/base/translator-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: translator-api
  labels:
    app: translator-api
    tier: api
spec:
  type: NodePort
  ports:
    - port: 8000
  selector:
    app: translator-api
    tier: api
