apps/translator-api/base/translator-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: translator-api
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "5m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: transcribe.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: translator-api
                port:
                  number: 8000
            path: /translator-api
            pathType: Prefix
  tls:
    - hosts:
        - transcribe.contextsuite.com
      secretName: transcribe-contextsuite-com-tls
